--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 DATABASE_URL=postgresql://test_db_psk0_user:u4sOi1ScQsgiuvSulSf6WUNiojkc2X1E@dpg-cv79ria3esus73ecdiqg-a.oregon-postgres.render.com/test_db_psk0
+
+EMAIL_HOST_USER=onifade617@gmail.com
+EMAIL_HOST_PASSWORD=aoxa ljpu vmsz coqp
+DEFAULT_FROM_EMAIL=My Blog <onifade617@gmail.com>
